Fix form spacing when stacked in a flow container
Forms add negative space to move their first child up when there are
hidden inputs, but this was creating a double move when a form is
nested inside a flow container because it also undoes the flow space.

--- a/app/assets/stylesheets/koi/forms/form-group.css
+++ b/app/assets/stylesheets/koi/forms/form-group.css
@@ -5,8 +5,14 @@ form:not([class]),
     margin-top: var(--flow-space, var(--space-m));
   }
 
+  /* if the first element in the form is hidden, create negative space to consume the next child's flow margin */
   &:has(> [type="hidden"]:first-child) {
     margin-top: calc(-1 * var(--flow-space, var(--space-m)));
+  }
+
+  /* if we're flowing ourselves then removing our flow margin is sufficient */
+  .flow > * + &:has(> [type="hidden"]:first-child) {
+    margin-top: 0;
   }
 }
 
